--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon app.js"
+    "server": "nodemon app.js",
+    "socket":"nodemon socket.js"
+
+
   },
   "author": "",
   "license": "ISC",
