--- a/server/package.json
+++ b/server/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon app.js",
-    "socket":"nodemon socket.js"
-
-
+    "socket": "nodemon socket.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "create-server": "^1.0.2",
     "createServer": "^3.0.0",
