--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@mui/system": "^5.15.20",
+    "chart.js": "^4.4.3",
     "firebase": "^10.12.1",
     "js-cookie": "^3.0.5",
     "primeflex": "^3.3.1",
@@ -25,6 +27,8 @@
     "react-icons": "^5.2.1",
     "react-pdf": "^9.0.0",
     "react-router-dom": "^6.23.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
   },
