work after orderthe code

--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,4 @@ PORT = 8080
 PORT_SOCKET=4000
 CLIENT_URL='http://localhost:5173'
 JWT_SECRET='your125_strong478_and357_random951_secret456!!'
-JWT_OPTIONS = { expiresIn: '1h' }
+JWT_OPTIONS =  '1h' 
