--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.19",
     "@mui/system": "^5.15.20",
     "chart.js": "^4.4.3",
+    "dotenv-webpack": "^8.1.0",
     "firebase": "^10.12.1",
     "js-cookie": "^3.0.5",
     "primeflex": "^3.3.1",
